# disruptionStatistics

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  conftest.py  mkdocs.yml  pyproject.toml
.github/actions/setup_python/: action.yml
.github/workflows/: force_commit_squashing.yml  linter.yml  precommit.yml  pytest.yml
docs/: index.md
docs/Source/: boundary_avoidance.md  data_loader.md  disruptivity_ref.md
docs/Source/vis/: disruptivity_vis_ref.md  plot_helpers.md  probability_vis.md
notebooks/: boundary_avoidance_demo.ipynb  getting_started.ipynb  grad_explorations.ipynb  modified_def.ipynb  tau_disruptivity.ipynb  test.ipynb
src/: TCV_CMod_1D2D_new_data.py  boundary_avoidance.py  cross_causal.py  data_interpolation.py  data_loader.py  disruptivity.py  indexing.py  probability.py  simple_file.py  tau_results_no_vde.pkl  vps_per_sec.py
src/tokamaks/: cmod.py  d3d.py
src/vis/: disruptivity_vis.py  plot_helpers.py  probability_vis.py
tests/: test_disruptivity.py  test_plot_helpers.py  test_simple_file.py
