[tool.poetry]
name = "disruptionstatistics"
version = "0.1.0"
description = ""
authors = ["Panagiotis Kaloyannis <pkaloyannis@cfs.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
pytest = "^7.2.1"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
multiprocess = "^0.70.14"
causalinference = "^0.1.3"
pre-commit = "^3.1.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
